# cargo-commitlint

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  build.rs  commitlint.example.toml
.commitlint/: .gitignore
.commitlint/hooks/: commit-msg
.github/workflows/: ci.yml  docs.yml  release.yml
docs/public/: llms.txt
docs/src/: index.html
src/: commit.rs  config.rs  format.rs  git.rs  hook.rs  main.rs  rules.rs  validator.rs
