[package]
name = "cargo-commitlint"
version = "1.0.0"
edition = "2021"
authors = ["Pegasus Heavy Industries LLC"]
description = "A Rust-based commit message linter following Conventional Commits specification"
license = "MIT"
repository = "https://github.com/pegasusheavy/cargo-commitlint"
homepage = "https://pegasusheavy.github.io/cargo-commitlint"
documentation = "https://pegasusheavy.github.io/cargo-commitlint"
readme = "README.md"
keywords = [
    "commitlint",
    "conventional-commits",
    "git-hooks",
    "commit-message",
    "cargo-subcommand",
]
categories = [
    "development-tools",
    "command-line-utilities",
]
exclude = [
    "/.github",
    "/.cargo-husky",
    "/.cursor",
    "/docs",
    "/.gitignore",
    "*.md",
    "!README.md",
    "/commitlint.example.toml",
    "/llms.txt",
    "/ai.txt",
]

[[bin]]
name = "cargo-commitlint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
regex = "1.12"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
which = "8.0"

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks", "precommit-hook", "prepush-hook"] }
